// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен вызвать gateApi с removeAutostrategy, а потом вызвать набор экшнов 1`] = `
Array [
  Object {
    "payload": Object {
      "message": "Автостратегия деактивирована",
      "view": "success",
    },
    "type": "NOTIFIER_SHOW_MESSAGE",
  },
  Object {
    "type": "AUTOSTRATEGY_CLOSE",
  },
  Object {
    "payload": Object {
      "autostrategy": null,
      "saleId": Array [
        "1102149895",
      ],
    },
    "type": "AUTOSTRATEGY_REMOVE_RESOLVE",
  },
]
`;

exports[`должен вызвать gateApi с removeAutostrategy, а потом вызвать набор экшнов, если что-то пошло не так 1`] = `
Array [
  Object {
    "payload": Object {
      "message": "Произошла ошибка, попробуйте ещё раз",
      "view": "error",
    },
    "type": "NOTIFIER_SHOW_MESSAGE",
  },
]
`;
